<resources>
    <string name="app_name">Dice Roller</string>
    <string name="roll">Roll</string>
    <string name="opponent_roll">Opponent Roll</string>
    <string name="current_score">Your current score is </string>
    <string name="opponent_current_score">Opponent current score is </string>
    <string name="lose">Unfortunately you lost!</string>
    <string name="play">PLAY</string>
    <string name="settings">SETTINGS</string>
    <string name="exit">EXIT</string>
    <string name="save">Save</string>
    <string name="previous">Previous</string>
    <string name="player">Player</string>
    <string name="next">Next</string>
    <string name="_0">0</string>
    <string name="score">Score:</string>
    <string name="close">Close</string>
    <string name="replay">Replay</string>
    <string name="saved">Successfully saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>