<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:keepScreenOn="true"
    tools:context=".presentation.fragments.MainFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_play"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button"
            android:elevation="1dp"
            android:fontFamily="@font/bpg_super_square"
            android:text="@string/play"
            android:textAllCaps="false"
            android:textColor="@color/text_color_gold"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_margin="50dp"
            android:background="@drawable/rounded_button"
            android:elevation="1dp"
            android:fontFamily="@font/bpg_super_square"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/text_color_gold"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button"
            android:elevation="1dp"
            android:fontFamily="@font/bpg_super_square"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/text_color_gold"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>